Fix issue with first page mobile view too wide

--- a/css/kibuba.scss
+++ b/css/kibuba.scss
@@ -2499,6 +2499,7 @@ td strong {
 			text-align: left;
 			margin-left: 80px;
 			background: transparent;
+			width: auto;
 		}
 		h3 {
 			font-size: 15px;
